páginas de html

--- a/contatoo.html
+++ b/contatoo.html
@@ -21,7 +21,7 @@
     <Li > Github: <a  href = "https://github.com/nathy2110" > Conheça Meus Projetos </a >  </li >
     <li > Email:nathy211001@gmail.com</li >
     </ul >
-    <p> Ou me envie uma mensagem por aqui: </p>
+    <p> Ou me envie uma mensagem por aqui mesmo: </p>
 
     <form>
         <label for="nome">Nome:</label><br>
