--- a/indexx.html
+++ b/indexx.html
@@ -27,7 +27,7 @@
    <p>
        Gosto de cantar, atuar, ver filmes e amo músicas indianas, algumas referências abaixo
    </p>
-   <img src="assets/imagens/eu.jpg" alt="Foto da criadora do site">
+   <img src="assets/imagens/eu.jpg" alt="Foto da criadora do conteúdo">
 
    <h2>Um dos Meus Vídeos prediletos:</h2>
 
