--- a/contatoo.html
+++ b/contatoo.html
@@ -18,7 +18,7 @@
     <h1>Entre em contato comigo</h1>
     <ul >
     <Li > Linkedin: <a  href = "https://www.linkedin.com/in/nathália-pereira-922930186" > Saiba Mais sobre mim </a > </li >
-    <Li > Github: <a  href = "https://github.com/nathy2110" > Conheça Meus Projetos </a >  </li >
+    <Li > Github: <a  href = "https://github.com/nathy2110" > Conheça Meus Projetos no Git </a >  </li >
     <li > Email:nathy211001@gmail.com</li >
     </ul >
     <p> Ou me envie uma mensagem por aqui mesmo: </p>
