--- a/contato2.html
+++ b/contato2.html
@@ -38,7 +38,7 @@
         <textarea name="assunto" id="assunto" cols="30" rows="10"></textarea>
         <br>
         <br>
-        <button>Enviar</button>
+        <button>Envie</button>
     </form>
     
 </body>
