--- a/index2.html
+++ b/index2.html
@@ -24,7 +24,7 @@
        Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam ipsum fugiat consequuntur, sit rerum temporibus vitae autem reprehenderit ullam ea! Doloremque illum iure, tempora nam vitae reiciendis atque iste cumque.
    </p>
    <p>
-        Gosto de cantar, atuar, ver filmes e amo músicas indianas, algumas referências abaixo: 
+        Amo  cantar, atuar, ver filmes e amo músicas indianas, algumas referências abaixo: 
    </p>
    <img src="assets/imagens/eu.jpg" alt="Foto da criadora do conteúdo">
 
