--- a/contato2.html
+++ b/contato2.html
@@ -15,7 +15,7 @@
             <a href="contato2.html">Contato</a>
         </li>
     </ul>
-    <h1>Entre em contato comigo</h1>
+    <h1>Entre em contato comigo:</h1>
     <ul >
     <Li > Linkedin: <a  href = "https://www.linkedin.com/in/nathália-pereira-922930186" > Saiba Mais sobre mim </a > </li >
     <Li > Github: <a  href = "https://github.com/nathy2110" > Conheça Meus Projetos no Git </a >  </li >
