--- a/index2.html
+++ b/index2.html
@@ -28,7 +28,7 @@
    </p>
    <img src="assets/imagens/eu.jpg" alt="Foto da criadora do conteúdo">
 
-   <h2>Um dos Meus Vídeos prediletos:</h2>
+   <h2>Um dos Meus Vídeos prediletos</h2>
 
    <iframe 
    width="560" 
