estilização feita com css

--- a/contato2.html
+++ b/contato2.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>contato</title>
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    <ul>
+    <ul id="menu">
         <li>
             <a href="index2.html">Home</a>
         </li>
@@ -21,7 +22,7 @@
     <Li > Github: <a  href = "https://github.com/nathy2110" > Conheça Meus Projetos no Git </a >  </li >
     <li > Email:nathy211001@gmail.com</li >
     </ul >
-    <p> Ou me envie uma mensagem por aqui mesmo: </p>
+    <p id="msg"> Ou me envie uma mensagem por aqui mesmo: </p>
 
     <form>
         <label for="nome">Nome:</label><br>
